solved the spacing issue

--- a/src/blocks/post/editor.scss
+++ b/src/blocks/post/editor.scss
@@ -54,8 +54,10 @@
 
 	   }
    }
-   ul {
-
-	   list-style: none;
-   }
+}
+.wp-block-uagb-post-grid.uagb-post-grid .uagb-post-pagination-wrap ul {
+	
+	list-style: none;
+	margin: 0px;
+	padding: 0px;
 }
